# random-ibc-example

./: .gitignore  Makefile  README.md  docker-compose.yml
contracts/consumer/: Cargo.toml  Makefile  consumer.wasm
contracts/consumer/src/: contract.rs  lib.rs  random.rs
contracts/generator/: Cargo.toml  Makefile
contracts/generator/src/: contract.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/proxy/: Cargo.toml  Makefile
contracts/proxy-contract/src/: contract.rs  msg.rs  state.rs
contracts/proxy/src/: contract.rs  msg.rs  state.rs
demo/: .gitignore  query-contracts.sh
demo/consumer/: send_random_request.sh
demo/consumer/ui/: app.py
demo/consumer/ui/static/: styles.css
demo/proxy/: Dockerfile  Makefile  confio-server.ts  entrypoint.sh  ibc.wasm  package.json  utils.ts
demo/requestor/: Dockerfile  Makefile  consumer.wasm  send_random_request.sh
demo/requestor/ui/: app.py
demo/requestor/ui/templates/: index.html
hermes-container/: hermes-alternative-config.toml
ibc-contracts-interactions/: README.md  create-channel.sh  query-contracts.sh  request-answer-for-life.sh  send-randomness-request.sh
ibc-contracts-interactions/confio-relay/: Dockerfile  Makefile  confio-server.ts  entrypoint.sh  package-lock.json  package.json  tsconfig.json  utils.ts
ibc-contracts-interactions/contract-upload/: .gitignore  package-lock.json  package.json  test.ts  utils.ts
ibc-contracts-interactions/contract-upload/ibc-contract/src/: contract.rs  msg.rs  state.rs
ibc-contracts-interactions/ibc-contract/: Cargo.toml
ibc-contracts-interactions/ibc-contract/src/: contract.rs  msg.rs  state.rs
ibc-contracts-interactions/manual-hermes-relay/: package-lock.json  package.json  request-answer-for-life.sh  test.ts  utils.ts
ibc-contracts-interactions/proxy-contract/: Cargo.toml
ibc-contracts-interactions/proxy-contract/src/: contract.rs  lib.rs  msg.rs  state.rs  utils.rs
ibc-contracts-interactions/random-proxy/: Dockerfile  Makefile  configure-cli.sh  ibc.wasm  send_random_request.sh
relayer-container/: entrypoint-hermes.sh  hermes-config.toml
relayers/hermes-container/: hermes.Dockerfile
relayers/manual-hermes-relay/: README.md  create-channel.sh  package-lock.json  package.json  test.ts
